<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="user_name">输入用户名或手机号</string>
    <string name="app_name">GOS2.9</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="look_list">查看列表</string>
    <string name="setting">设置</string>
    <string name="show_project">20℃</string>
    <string name="weather">天气</string>
    <string name="temperature">温度</string>
    <string name="temperatures">温度区间</string>
    <string name="offtitle">蜂寻(上海)信息科技有限公司</string>
    <string name="light">照明模式: 手动开启</string>
    <string name="lighttime">节能时间段:0: 00 - 0: 00</string>

    <string name="energy">档位</string>
    <string name="temperatur">温度</string>
    <string name="setitemsystem">系统说明</string>
    <string name="setitemversion">版本信息</string>
    <string name="setitemserverpath">连接服务器地址</string>
    <string name="back">退出登录</string>

</resources>
